final commit for tonight

--- a/src/main/resources/assets/tropical/lang/en_us.json
+++ b/src/main/resources/assets/tropical/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-    "block.tropical.white_sand": "White Sand"
+    "block.tropical.white_sand": "White Sand",
+    "item.tropical.debug_teleporter": "Staff of the Ocean King"
 }
